--- a/src/Credfeto.Aur.Mirror.Server/Credfeto.Aur.Mirror.Server.csproj
+++ b/src/Credfeto.Aur.Mirror.Server/Credfeto.Aur.Mirror.Server.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <AnalysisLevel>latest</AnalysisLevel>
     <AnalysisMode>AllEnabledByDefault</AnalysisMode>
@@ -77,7 +77,6 @@
     <PackageReference Include="Credfeto.Docker.HealthCheck.Http.Client" Version="0.0.52.345" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Systemd" Version="9.0.8" />
     <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="9.0.8" />
-    <PackageReference Include="NonBlocking" Version="2.1.2" />
     <PackageReference Include="Serilog" Version="4.3.0" />
     <PackageReference Include="Serilog.Enrichers.Demystifier" Version="1.0.3" />
     <PackageReference Include="Serilog.Enrichers.Environment" Version="3.0.1" />
