--- a/src/Credfeto.Aur.Mirror.Server/appsettings.json
+++ b/src/Credfeto.Aur.Mirror.Server/appsettings.json
@@ -7,29 +7,14 @@
   },
   "AllowedHosts": "*",
   "Proxy": {
-    "Sites": [
-      {
-        "Source": "localhost",
-        "Target": "https://builds.dotnet.microsoft.com",
-        "Settings": [
-          {
-            "Match": "\\.tar\\.gz$",
-            "LifeTimeSeconds": 63115200
-          }
-        ]
-      },
-      {
-        "Source": "builds.dotnet.local",
-        "Target": "https://builds.dotnet.microsoft.com",
-        "Settings": [
-          {
-            "Match": "\\.tar\\.gz$",
-            "LifeTimeSeconds": 63115200
-          }
-        ]
-      }
-    ],
-    "Storage": "/data"
+    "Upstream": {
+      "Rpc": "https://aur.archlinux.org/rpc?",
+      "Repos": "https://aur.archlinux.org"
+    },
+    "Storage": {
+      "Metadata":"/data/metadata",
+      "Repos": "/data/repos"
+    }
   }
 }
 
