--- a/src/Credfeto.Aur.Mirror.Server/appsettings.json
+++ b/src/Credfeto.Aur.Mirror.Server/appsettings.json
@@ -7,6 +7,9 @@
   },
   "AllowedHosts": "*",
   "Proxy": {
+    "Git": {
+      "Exeutable": "/usr/bin/git"
+    },
     "Upstream": {
       "Rpc": "https://aur.archlinux.org/rpc?",
       "Repos": "https://aur.archlinux.org"
