--- a/src/Credfeto.Aur.Mirror.Server/Credfeto.Aur.Mirror.Server.csproj
+++ b/src/Credfeto.Aur.Mirror.Server/Credfeto.Aur.Mirror.Server.csproj
@@ -75,6 +75,7 @@
   <ItemGroup>
     <PackageReference Include="Credfeto.Date" Version="1.1.138.1330" />
     <PackageReference Include="Credfeto.Docker.HealthCheck.Http.Client" Version="0.0.53.355" />
+    <PackageReference Include="LibGit2Sharp" Version="0.31.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Systemd" Version="9.0.9" />
     <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="9.0.9" />
     <PackageReference Include="Serilog" Version="4.3.0" />
