--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -34,6 +34,10 @@
    color: "96f7d2"
    description: "Changes in Credfeto.Aur.Mirror.Server project"
 
+ - name: "credfeto-aur-mirror-tests"
+   color: "0e8a16"
+   description: "Changes in Credfeto.Aur.Mirror.Tests project"
+
  - name: "dependencies"
    color: "0366d6"
    description: "Updates to dependencies"
