--- a/src/Credfeto.Aur.Mirror.Server/Credfeto.Aur.Mirror.Server.csproj
+++ b/src/Credfeto.Aur.Mirror.Server/Credfeto.Aur.Mirror.Server.csproj
@@ -111,4 +111,7 @@
     <PackageReference Include="SourceLink.Create.CommandLine" Version="2.8.3" PrivateAssets="All" ExcludeAssets="runtime" />
     <PackageReference Include="ToStringWithoutOverrideAnalyzer" Version="0.6.0" PrivateAssets="All" ExcludeAssets="runtime" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Credfeto.Aur.Mirror.Interfaces\Credfeto.Aur.Mirror.Interfaces.csproj" />
+  </ItemGroup>
 </Project>
