--- a/src/Credfeto.Aur.Mirror.Git/Credfeto.Aur.Mirror.Git.csproj
+++ b/src/Credfeto.Aur.Mirror.Git/Credfeto.Aur.Mirror.Git.csproj
@@ -52,7 +52,11 @@
     <NuGetAuditSuppress Include="https://github.com/advisories/GHSA-xhfc-gr8f-ffwc" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Credfeto.Date.Interfaces" Version="1.1.138.1330" />
+    <PackageReference Include="LibGit2Sharp" Version="0.31.0" />
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="9.0.9" />
+    <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="3.0.1"/>
+    <PackageReference Include="NonBlocking" Version="2.1.2" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AsyncFixer" Version="1.6.0" PrivateAssets="All" ExcludeAssets="runtime" />
