--- a/src/Credfeto.Aur.Mirror.Rpc.Tests/Credfeto.Aur.Mirror.Rpc.Tests.csproj
+++ b/src/Credfeto.Aur.Mirror.Rpc.Tests/Credfeto.Aur.Mirror.Rpc.Tests.csproj
@@ -30,7 +30,7 @@
     <OutputType>Exe</OutputType>
     <RepositoryType>git</RepositoryType>
     <RunAOTCompilation>false</RunAOTCompilation>
-    <TargetFrameworks>net9.0;net10.0</TargetFrameworks>
+    <TargetFramework>net10.0</TargetFramework>
     <TestingPlatformDotnetTestSupport>true</TestingPlatformDotnetTestSupport>
     <TieredCompilation>true</TieredCompilation>
     <TieredPGO>true</TieredPGO>
@@ -54,7 +54,6 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FunFair.Test.Common" Version="6.2.4.1830"/>
-
     <PackageReference Include="NSubstitute" Version="5.3.0" />
     <PackageReference Include="xunit.v3.mtp-v2" Version="3.2.0"/>
   </ItemGroup>
@@ -79,5 +78,8 @@
     <PackageReference Include="SourceLink.Create.CommandLine" Version="2.8.3" PrivateAssets="All" ExcludeAssets="runtime" />
     <PackageReference Include="ToStringWithoutOverrideAnalyzer" Version="0.6.0" PrivateAssets="All" ExcludeAssets="runtime" />
     <PackageReference Include="xunit.analyzers" Version="1.25.0" PrivateAssets="All" ExcludeAssets="runtime"/>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Credfeto.Aur.Mirror.Rpc\Credfeto.Aur.Mirror.Rpc.csproj" />
   </ItemGroup>
 </Project>
