--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -14,6 +14,8 @@
  - any: [ 'src/$Credfeto.Aur.Mirror.Config/**/*' ]
 "credfeto-aur-mirror-git":
  - any: [ 'src/$Credfeto.Aur.Mirror.Git/**/*' ]
+"credfeto-aur-mirror-git-interfaces":
+ - any: [ 'src/$Credfeto.Aur.Mirror.Git.Interfaces/**/*' ]
 "credfeto-aur-mirror-interfaces":
  - any: [ 'src/$Credfeto.Aur.Mirror.Interfaces/**/*' ]
 "credfeto-aur-mirror-models":
