--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -42,6 +42,10 @@
    color: "96f7d2"
    description: "Changes in Credfeto.Aur.Mirror.Git.Interfaces project"
 
+ - name: "credfeto-aur-mirror-git-tests"
+   color: "0e8a16"
+   description: "Changes in Credfeto.Aur.Mirror.Git.Tests project"
+
  - name: "credfeto-aur-mirror-interfaces"
    color: "96f7d2"
    description: "Changes in Credfeto.Aur.Mirror.Interfaces project"
