--- a/src/Credfeto.Aur.Mirror.Rpc/Credfeto.Aur.Mirror.Rpc.csproj
+++ b/src/Credfeto.Aur.Mirror.Rpc/Credfeto.Aur.Mirror.Rpc.csproj
@@ -59,6 +59,8 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Credfeto.Enumeration.Source.Generation.Attributes" Version="1.2.129.1430" />
+    <PackageReference Include="Credfeto.Extensions.Linq" Version="1.0.139.1284" />
+    <PackageReference Include="Credfeto.Services.Startup.Interfaces" Version="1.1.135.1309" />
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="9.0.9" />
   </ItemGroup>
   <ItemGroup>
