--- a/src/Credfeto.Aur.Mirror.Rpc/Credfeto.Aur.Mirror.Rpc.csproj
+++ b/src/Credfeto.Aur.Mirror.Rpc/Credfeto.Aur.Mirror.Rpc.csproj
@@ -62,6 +62,7 @@
     <PackageReference Include="Credfeto.Extensions.Linq" Version="1.0.139.1284" />
     <PackageReference Include="Credfeto.Services.Startup.Interfaces" Version="1.1.135.1309" />
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="9.0.9" />
+    <PackageReference Include="NonBlocking" Version="2.1.2" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AsyncFixer" Version="1.6.0" PrivateAssets="All" ExcludeAssets="runtime" />
