--- a/src/Credfeto.Aur.Mirror.Rpc/Credfeto.Aur.Mirror.Rpc.csproj
+++ b/src/Credfeto.Aur.Mirror.Rpc/Credfeto.Aur.Mirror.Rpc.csproj
@@ -63,6 +63,8 @@
     <PackageReference Include="Credfeto.Services.Startup.Interfaces" Version="1.1.135.1309" />
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="9.0.9" />
     <PackageReference Include="NonBlocking" Version="2.1.2" />
+    <PackageReference Include="System.Interactive.Async" Version="6.0.3" />
+    <PackageReference Include="System.Reactive" Version="6.1.0" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AsyncFixer" Version="1.6.0" PrivateAssets="All" ExcludeAssets="runtime" />
