--- a/src/Credfeto.Aur.Mirror.Server/appsettings.json
+++ b/src/Credfeto.Aur.Mirror.Server/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "Proxy": {
     "Git": {
-      "Exeutable": "/usr/bin/git"
+      "Executable": "/usr/bin/git"
     },
     "Upstream": {
       "Rpc": "https://aur.archlinux.org/rpc?",
