--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -30,6 +30,18 @@
    color: "d8bb50"
    description: "Configuration files changes"
 
+ - name: "credfeto-aur-mirror-cache"
+   color: "96f7d2"
+   description: "Changes in Credfeto.Aur.Mirror.Cache project"
+
+ - name: "credfeto-aur-mirror-cache-interfaces"
+   color: "96f7d2"
+   description: "Changes in Credfeto.Aur.Mirror.Cache.Interfaces project"
+
+ - name: "credfeto-aur-mirror-cache-tests"
+   color: "0e8a16"
+   description: "Changes in Credfeto.Aur.Mirror.Cache.Tests project"
+
  - name: "credfeto-aur-mirror-config"
    color: "96f7d2"
    description: "Changes in Credfeto.Aur.Mirror.Config project"
