Removed reference to Credfeto.Enumeration.Source.Generation.Attributes

--- a/src/Credfeto.Aur.Mirror.Cache/Credfeto.Aur.Mirror.Cache.csproj
+++ b/src/Credfeto.Aur.Mirror.Cache/Credfeto.Aur.Mirror.Cache.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <AnalysisLevel>latest</AnalysisLevel>
     <AnalysisMode>AllEnabledByDefault</AnalysisMode>
@@ -54,7 +54,6 @@
     <ProjectReference Include="..\Credfeto.Aur.Mirror.Cache.Interfaces\Credfeto.Aur.Mirror.Cache.Interfaces.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Credfeto.Enumeration.Source.Generation.Attributes" Version="1.2.129.1430" />
     <PackageReference Include="Credfeto.Extensions.Linq" Version="1.0.139.1284" />
     <PackageReference Include="Credfeto.Services.Startup.Interfaces" Version="1.1.135.1309" />
     <PackageReference Include="NonBlocking" Version="2.1.2" />
