--- a/src/Credfeto.Aur.Mirror.Cache.Interfaces/Credfeto.Aur.Mirror.Cache.Interfaces.csproj
+++ b/src/Credfeto.Aur.Mirror.Cache.Interfaces/Credfeto.Aur.Mirror.Cache.Interfaces.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <AnalysisLevel>latest</AnalysisLevel>
     <AnalysisMode>AllEnabledByDefault</AnalysisMode>
@@ -57,7 +57,6 @@
   <ItemGroup>
     <PackageReference Include="Credfeto.Date.Interfaces" Version="1.1.138.1330" />
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="9.0.9" />
-    <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="3.0.1" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AsyncFixer" Version="1.6.0" PrivateAssets="All" ExcludeAssets="runtime" />
